# todo-app-rust

./: .env  Cargo.toml  README.md
migrations/2022-12-26-154313_todos/: up.sql
migrations/2023-01-01-142411_users/: up.sql
src/: main.rs  schema.rs
src/args/: args.rs
src/db/: db.rs
src/helpers/: helper.rs  mod.rs
src/model/: mod.rs  model.rs  user.rs
src/routes/: routes.rs
