[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
clap = {version = "3.1.9", features = ["derive"]}
data-encoding = "2.3.3"
ring = "0.16.20"